tests/snapshots/list__list_shows_each_plugin_with_its_own_installed_and_enabled_status.snap
---
source: tests/list.rs
assertion_line: 27
expression: output
---
+------+---------+-----------+
| name | enabled | installed |
+------+---------+-----------+
| toml | false   | true      |
+------+---------+-----------+
| yaml | true    | true      |
+------+---------+-----------+
