tests/snapshots/list__list_shows_each_plugin_with_its_own_installed_and_enabled_status_real.snap
---
source: tests/list.rs
expression: output
---
+------+---------+-----------+-----------------------------------------------------------------------------------+
| name | enabled | installed | source                                                                            |
+------+---------+-----------+-----------------------------------------------------------------------------------+
| toml | false   | true      | https://raw.githubusercontent.com/saulpw/visidata/v3.1.1/visidata/loaders/toml.py |
+------+---------+-----------+-----------------------------------------------------------------------------------+
| yaml | true    | true      | https://raw.githubusercontent.com/saulpw/visidata/v3.1.1/visidata/loaders/yaml.py |
+------+---------+-----------+-----------------------------------------------------------------------------------+
