tests/snapshots/list__list_shows_empty_table_when_no_plugins_installed.snap
---
source: tests/list.rs
assertion_line: 14
expression: output
---
+------+---------+-----------+
| name | enabled | installed |
+------+---------+-----------+
